add questions to 4.2

--- a/words.html
+++ b/words.html
@@ -831,13 +831,9 @@ but its exploitativeness was its downfall. -->
 (Note: sometimes, a few <span class="grudge">Grudgers</span> may stick around,
 because when all players except <span class="grudge">Grudger</span> &amp; <span class="tft">Copycat</span> 
 are eliminated, the two tie.) -->
-(یادداشت: بعضی وقت‌ها، چندتایی 
+بعضی وقت‌ها، چندتایی 
 <span class="grudge">کینه‌ای</span>
-ممکن است باقی بمانند، برای اینکه وقتی همه به جز 
-<span class="grudge">‌‌کینه‌ای‌ها</span> 
-و
-<span class="tft">مقلدین</span> 
-از بین بروند، این دوتا با هم مساوی می‌کنند.)
+ممکن است باقی بمانند. چرا؟
 <br><br>
 <!-- So, it seems the math of game theory is telling us something:
 that <span class="tft">Copycat's</span> philosophy,
@@ -845,8 +841,7 @@ that <span class="tft">Copycat's</span> philosophy,
 <i>moral</i> truth, but also a <i>mathematical</i> truth.
 However...
 -->
-نظریه بازی درسی برای ما دارد:
-«با دیگران همانطور رفتار کن که دوست داری با تو رفتار کنند»، این نه تنها یک حقیقت اخلاقی است، بلکه یک حقیقت ریاضی هم هست. 
+از دو این دوتا تورنومنت چه نتیجه اخلاقی ای می تونیم بگیریم؟
 
 </p>
 <p id="evo_10_btn">
