--- a/words.html
+++ b/words.html
@@ -833,7 +833,7 @@ because when all players except <span class="grudge">Grudger</span> &amp; <span 
 are eliminated, the two tie.) -->
 بعضی وقت‌ها، چندتایی 
 <span class="grudge">کینه‌ای</span>
-ممکن است باقی بمانند. چرا؟
+ممکن است باقی بمونند. چرا؟
 <br><br>
 <!-- So, it seems the math of game theory is telling us something:
 that <span class="tft">Copycat's</span> philosophy,
@@ -841,7 +841,7 @@ that <span class="tft">Copycat's</span> philosophy,
 <i>moral</i> truth, but also a <i>mathematical</i> truth.
 However...
 -->
-از دو این دوتا تورنومنت چه نتیجه اخلاقی ای می تونیم بگیریم؟
+ازاین دوتا تورنومنت چه نتیجه اخلاقی ای می تونیم بگیریم؟
 
 </p>
 <p id="evo_10_btn">
