--- a/words.html
+++ b/words.html
@@ -955,7 +955,10 @@ Feel free to experiment! -->
 
 <p id="distrust_2_end">
 <!-- once you're done playing around, click: -->
-هر وقت کارت تمام شد، دکمه ادامه را فشار بده.
+	به نظرتون تعداد دور های بازی چه تاثیری روی برنده دارد؟
+	<br>
+	به نظرتون تعداد دور های بازی چه مفهوم دنیای واقعی رو مدل می کنه؟
+
 </p>
 
 <p id="distrust_3">
