--- a/words.html
+++ b/words.html
@@ -1405,7 +1405,7 @@ to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
 <i>
 همه
 </i> 
-مقادیر ...
+مقادیر سوءتفاهم درست است؟
 
 </p>
 <p id="noise_evo_4_2_btn">
